# mlflow-autogluon

./: .gitignore  CHANGELOG.md  README.md  environment.yml  index.html  mkdocs.yml  mlflow.db  pixi.toml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  docs-preview.yml  docs.yml  publish-pypi.yml  release-please.yml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/api/: index.html
0.2.0/autologging/: index.html
0.2.0/contributing/: index.html
0.2.0/model-flavor/: index.html
0.2.0/quickstart/: index.html
0.2.0/search/: search_index.json
0.2.0/serving/: index.html
api/: index.html
autologging/: index.html
conda-recipe/: README.md
contributing/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/api/: index.html
dev/autologging/: index.html
dev/contributing/: index.html
dev/model-flavor/: index.html
dev/quickstart/: index.html
dev/search/: search_index.json
dev/serving/: index.html
docs/: api.md  autologging.md  contributing.md  index.md  model-flavor.md  quickstart.md  serving.md
examples/: autolog_quickstart.py
mlflow_autogluon/: __init__.py  autolog.py  flavor.py
model-flavor/: index.html
pr-preview/pr-1/: index.html  sitemap.xml
pr-preview/pr-1/api/: index.html
pr-preview/pr-1/autologging/: index.html
pr-preview/pr-1/contributing/: index.html
pr-preview/pr-1/model-flavor/: index.html
pr-preview/pr-1/quickstart/: index.html
pr-preview/pr-1/search/: search_index.json
pr-preview/pr-1/serving/: index.html
pr-preview/pr-11/contributing/: index.html
pr-preview/pr-11/search/: search_index.json
pr-preview/pr-12/: index.html  sitemap.xml
pr-preview/pr-12/serving/: index.html
pr-preview/pr-14/: 404.html
pr-preview/pr-18/: sitemap.xml
pr-preview/pr-4/: 404.html
pr-preview/pr-6/: objects.inv
search/: search_index.json
tests/: conftest.py  test_autolog.py  test_autolog_options.py  test_flavor.py  test_flavor_options.py  test_internals.py  test_multimodal.py  test_serving.py  test_timeseries.py
(+15 files in other folders)
