[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-autogluon"
version = "0.1.1"
description = "MLflow community flavor and autologging for AutoGluon predictors"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Evan Rees", email = "evanroyrees@northsky.software" },
]
keywords = ["mlflow", "autogluon", "automl", "autologging", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlflow>=2.15",
]

[project.optional-dependencies]
tabular = [
    "autogluon.tabular>=1.1",
]
timeseries = [
    "autogluon.timeseries>=1.1",
]
multimodal = [
    "autogluon.multimodal>=1.1",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
dev = [
    "mlflow-autogluon[tabular,test,docs]",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/PhylaTech/mlflow-autogluon"
Documentation = "https://phylatech.github.io/mlflow-autogluon/"
Issues = "https://github.com/PhylaTech/mlflow-autogluon/issues"

[tool.setuptools.packages.find]
include = ["mlflow_autogluon*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
